<resources>
    <string name="app_name">Repository G-3</string>
    <string name="btn_text1">Save</string>
    <string name="btn_text2">Go to 2nd</string>
    <string name="btn_text3">Load preferences</string>
    <string name="btn_text4">Back</string>
    <string name="txt_input">Input</string>
    <string name="txt_output">Will I change?</string>
    <string-array name="themes">
        <item>Default theme</item>
        <item>Light theme</item>
        <item>Dark theme</item>
    </string-array>
</resources>